--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,10 @@
                 
                     <footer id="footer">
                         <section>
-                            <form method="post" action="#">
+                            
+                                <form
+  action="https://formspree.io/f/xjvqyjeb"
+  method="POST">
                                 <div class="fields">
                                     <div class="field">
                                         <label for="name">Name</label>
